<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>lib.homies.framework</groupId>
        <artifactId>lib</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>homieslib-processor</artifactId>

    <dependencies>
        <!-- API module for accessing command annotations -->
        <dependency>
            <groupId>lib.homies.framework</groupId>
            <artifactId>homieslib-api</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- JavaPoet for code generation -->
        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>javapoet</artifactId>
            <version>1.13.0</version>
        </dependency>

        <!-- AutoService annotations, needed for @AutoService -->
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service-annotations</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- AutoService processor, which processes @AutoService -->
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- Re-adding paper-api with 'provided' scope. -->
        <!-- This is necessary because CommandProcessor.java directly references org.bukkit classes. -->
        <!-- It's 'provided' because these classes are available in the runtime environment (Paper server) -->
        <!-- and should not be bundled into the processor JAR itself. -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <!-- By including auto-service as a dependency with 'provided' scope, -->
                    <!-- the compiler will automatically pick it up and run it. -->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
